Se mejora el diseño de las carpetas, se agrega componente de card, y se pule la seccion de about

--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -1,2 +1,14 @@
 <sidebar />
-<app-principal-page />
+
+<container title="Acerca de Mi" [isSidebarOpened]="isSidebarOpened()" id="aboutme">
+    <app-about-me />
+</container>
+<container title="Experiencia Profesional" [isSidebarOpened]="isSidebarOpened()" id="experience">
+    <app-experience />
+</container>
+<container title="Proyectos Personales" [isSidebarOpened]="isSidebarOpened()" id="projects">
+    <app-projects />
+</container>
+<container title="Tecnologias" [isSidebarOpened]="isSidebarOpened()" id="technologies">
+    <app-technologies />
+</container>
