Se agregan ultimos cambios

--- a/src/app/sections/about-me/about-me.html
+++ b/src/app/sections/about-me/about-me.html
@@ -50,11 +50,11 @@
 
 <!-- Icon Blocks -->
 <div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
-  <div class="grid sm:grid-cols-2 lg:grid-cols-3 items-center gap-6 md:gap-10">
+  <div class="grid sm:grid-cols-3 lg:grid-cols-4 items-center gap-6 md:gap-10">
     <card title="Compromiso" description="Dedicacion total a cada proyecto para garantizar su exito" icon="icon-[tabler--circle-check]" />
     <card title="Calidad" description="Entrega de soluciones tecnicas de alta calidad y rendimiento" icon="icon-[tabler--circle-check]" />
     <card title="Flexibilidad" description="Gran adaptabilidad a diferentes tipos de proyectos de desarrollo y TI" icon="icon-[tabler--circle-check]" />
-    <card title="Agilidad" description="+ 3 años de experiencia trabajando en equipo agiles bajo metodologia scrumban" icon="icon-[tabler--circle-check]" />
+    <card title="Agilidad" description="+ 3 años de experiencia trabajando bajo metodologias agiles" icon="icon-[tabler--circle-check]" />
 
   </div>
 </div>
