--- a/src/app/components/card/card.html
+++ b/src/app/components/card/card.html
@@ -1,4 +1,4 @@
-    <div class="size-full bg-white shadow-lg rounded-lg p-5 dark:bg-neutral-900">
+    <div class="size-full bg-white shadow-lg rounded-lg p-5 dark:bg-neutral-900 min-h-[22vh]">
       <div class="flex items-center gap-x-4 mb-3">
         <div class="inline-flex justify-center items-center size-15.5 rounded-full border-4 border-blue-50 bg-blue-100 dark:border-blue-900 dark:bg-blue-800">
             <span class="{{icon()}} shrink-0 size-6 text-blue-600 dark:text-blue-400"></span>        
