Se trabaja seccion de experiencia

--- a/src/app/sections/about-me/about-me.html
+++ b/src/app/sections/about-me/about-me.html
@@ -14,7 +14,7 @@
         </div>
     </div>
 
-    <div class="mx-6 border-l border-[#ecf0f1]"></div>
+    <divider [isVertical]="true"/>
 
     <div>
         <p class="text-sm text-gray-600 dark:text-neutral-400">
