--- a/src/app/sections/experience/experience.html
+++ b/src/app/sections/experience/experience.html
@@ -1,10 +1,10 @@
 <ul class="max-w-full flex gap-2 flex-col">
     @for (exp of experience; track $index) {
         <li class="inline-flex items-center py-4 px-4 text-sm font-medium bg-white border border-gray-200 text-gray-800 -mt-px first:rounded-t-lg first:mt-0 last:rounded-b-lg dark:bg-neutral-900 dark:border-neutral-700 dark:text-white">
-            <div class="flex flex-col">
-                <h2 class="text-2xl font-medium text-gray-800 dark:text-neutral-200">{{exp.title}}</h2>
+            <div class="w-full flex flex-col">
+                <h2 class="text-lg font-medium text-gray-800 dark:text-neutral-200">{{exp.title}}</h2>
                 <divider [isVertical]="false"/>
-                <h3 class="text-md text-gray-600 dark:text-neutral-400">{{exp.company}} ({{exp.period}})</h3>
+                <h3 class="text-sm text-gray-600 dark:text-neutral-400">{{exp.company}} ({{exp.period}})</h3>
                 <div class="mb-2"></div>
                 <ul class="list-disc list-inside dark:text-white">
                     @for(items of exp.description; track $index) {
