--- a/src/app/components/tabnav/tabnav.html
+++ b/src/app/components/tabnav/tabnav.html
@@ -1,12 +1,12 @@
-<div class="border-e border-[#ecf0f1] h-full dark:border-neutral-700">
-  <nav class="flex flex-col space-y-2">
+<div class="max-h-[50vh] border-e border-[#ecf0f1] overflow-x-hidden overflow-y-auto dark:border-neutral-700">
+  <nav class="flex flex-col space-y-2 whitespace-pre-line">
     @for (item of items(); track $index) {
       <button
         type="button"
         (click)="tabnavService.setActive($index + 1)"
         role="tab"
         [attr.aria-selected]="tabnavService.selectedIndex() === $index + 1"
-        class="py-1 pe-4 inline-flex items-center gap-x-2 border-e-2 text-sm whitespace-nowrap focus:outline-none disabled:opacity-50 disabled:pointer-events-none"
+        class="inline-flex py-1 ps-2 border-s-2 text-sm justify-start text-start focus:outline-none disabled:opacity-50 disabled:pointer-events-none"
         
         [class.active-tab]="tabnavService.selectedIndex()  === $index + 1"
         [class.inactive-tab]="tabnavService.selectedIndex() !== $index + 1"
