--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -15,6 +15,6 @@
 <container title="Proyectos Personales" [isSidebarOpened]="isSidebarOpened()" id="projects">
     <app-projects />
 </container>
-<container title="Tecnologias" [isSidebarOpened]="isSidebarOpened()" id="technologies">
-    <app-technologies />
+<container title="Formación" [isSidebarOpened]="isSidebarOpened()" id="academicInformation">
+    <app-academic-information />
 </container>
