Se soluciona problema con el btn de darkmode y se arreglan colores

--- a/src/app/components/divider/divider.html
+++ b/src/app/components/divider/divider.html
@@ -1,1 +1,1 @@
-<div [class]="isVertical() ? 'border-l h-full mx-6' : 'border w-full'" class="border-[#ecf0f1]"></div>
+<div [class]="isVertical() ? 'border-l h-full mx-6' : 'border w-full'" class="border-[#078ee9]"></div>
