--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -1,20 +1,16 @@
-<sidebar />
-<div class="flex justify-end align-top p-4">
-    <label for="darkSwtich" class="relative inline-block w-11 h-6 cursor-pointer">
-    <input data-hs-theme-switch="" type="checkbox" id="darkSwtich" class="peer sr-only">
-    <span class="absolute inset-0 bg-gray-200 rounded-full transition-colors duration-200 ease-in-out peer-checked:bg-blue-600 dark:bg-neutral-700 dark:peer-checked:bg-blue-500 peer-disabled:opacity-50 peer-disabled:pointer-events-none"></span>
-    <span class="absolute top-1/2 start-0.5 -translate-y-1/2 size-5 bg-white rounded-full shadow-sm !transition-transform duration-200 ease-in-out peer-checked:translate-x-full dark:bg-neutral-400 dark:peer-checked:bg-white"></span>
-    </label>
+<div class="flex flex-col bg-[#ecf0f1] dark:bg-neutral-700">
+    <sidebar />
+
+    <container title="Acerca de Mi" [isSidebarOpened]="isSidebarOpened()" id="aboutme">
+        <app-about-me />
+    </container>
+    <container title="Experiencia Profesional" [isSidebarOpened]="isSidebarOpened()" id="experience">
+        <app-experience />
+    </container>
+    <container title="Proyectos Personales" [isSidebarOpened]="isSidebarOpened()" id="projects">
+        <app-projects />
+    </container>
+    <container title="Formación" [isSidebarOpened]="isSidebarOpened()" id="academicInformation">
+        <app-academic-information />
+    </container>
 </div>
-<container title="Acerca de Mi" [isSidebarOpened]="isSidebarOpened()" id="aboutme">
-    <app-about-me />
-</container>
-<container title="Experiencia Profesional" [isSidebarOpened]="isSidebarOpened()" id="experience">
-    <app-experience />
-</container>
-<container title="Proyectos Personales" [isSidebarOpened]="isSidebarOpened()" id="projects">
-    <app-projects />
-</container>
-<container title="Formación" [isSidebarOpened]="isSidebarOpened()" id="academicInformation">
-    <app-academic-information />
-</container>
