--- a/src/app/sections/about-me/about-me.html
+++ b/src/app/sections/about-me/about-me.html
@@ -1,4 +1,4 @@
-<div class="mt-8 flex flex-col gap-8">
+<div class="space-y-8 flex flex-col">
   <!-- Header -->
   <div class="flex flex-col md:flex-row items-start md:items-center gap-6">
     <!-- Avatar -->
