--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -1,6 +1,5 @@
 <div class="flex flex-col bg-[#ecf0f1] dark:bg-neutral-700">
     <sidebar />
-
     <container title="Acerca de Mi" [isSidebarOpened]="isSidebarOpened()" id="aboutme">
         <app-about-me />
     </container>
@@ -10,7 +9,7 @@
     <container title="Proyectos Personales" [isSidebarOpened]="isSidebarOpened()" id="projects">
         <app-projects />
     </container>
-    <container title="Formación" [isSidebarOpened]="isSidebarOpened()" id="academicInformation">
+    <container title="Formación" [isSidebarOpened]="isSidebarOpened()" id="academicinformation">
         <app-academic-information />
     </container>
 </div>
