--- a/src/app/sections/academic-information/academic-information.html
+++ b/src/app/sections/academic-information/academic-information.html
@@ -1,4 +1,4 @@
-<div class="space-y-8">
+<div class="space-y-8 flex flex-col relative p-5 rounded-xl border border-[#ecf0f1] bg-white dark:bg-neutral-900 dark:border-neutral-700">
   <!-- Education -->
   <div>
     <h2 class="text-lg font-semibold text-gray-800 dark:text-neutral-100">
