--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -1,9 +1,16 @@
 <!-- Navigation Toggle -->
-<div class="lg:hidden py-16 text-center">
-  <button type="button" class="py-2 px-3 inline-flex justify-center items-center gap-x-2 text-start bg-gray-800 border border-gray-800 text-white text-sm font-medium rounded-lg shadow-2xs align-middle hover:bg-gray-950 focus:outline-hidden focus:bg-gray-900 dark:bg-white dark:text-neutral-800 dark:hover:bg-neutral-200 dark:focus:bg-neutral-200" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-sidebar-content-push-to-mini-sidebar" aria-label="Toggle navigation" data-hs-overlay="#hs-sidebar-content-push-to-mini-sidebar">
-    Open
-  </button>
-</div>
+<button
+  type="button"
+  class="
+    fixed top-3 left-3 z-50 flex justify-center items-center gap-x-3 size-6 bg-white border border-gray-200 text-sm text-gray-600 hover:bg-gray-100 rounded-full disabled:opacity-50 disabled:pointer-events-none focus:outline-hidden focus:bg-gray-100 dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700 dark:hover:text-neutral-200 dark:focus:text-neutral-2000 lg:hidden"
+  aria-haspopup="dialog"
+  aria-expanded="false"
+  aria-controls="hs-sidebar-content-push-to-mini-sidebar"
+  aria-label="Toggle navigation"
+  data-hs-overlay="#hs-sidebar-content-push-to-mini-sidebar"
+>
+<span class="icon-[tabler--layout-sidebar-left-expand] bg-black size-4"></span>
+</button>
 <!-- End Navigation Toggle -->
 
 <!-- Sidebar -->
@@ -14,11 +21,11 @@ fixed top-0 start-0 bottom-0 z-60 bg-white border-e border-gray-200 dark:bg-neut
       <!-- Header -->
       <header class="py-4 px-2 flex justify-between items-center gap-x-2">
 
-        <img class="hs-overlay-minified:hidden w-16" src="/logo.svg" alt="Logo" />
+        <img class="hs-overlay-minified:hidden w-16 dark:invert" src="/logo.svg" alt="Logo" />
 
         <div class="lg:hidden">
           <!-- Close Button -->
-          <button (click)="toggleSidebar()" type="button" class="flex justify-center items-center gap-x-3 size-6 bg-white border border-gray-200 text-sm text-gray-600 hover:bg-gray-100 rounded-full disabled:opacity-50 disabled:pointer-events-none focus:outline-hidden focus:bg-gray-100 dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700 dark:hover:text-neutral-200 dark:focus:text-neutral-200" data-hs-overlay="#hs-sidebar-content-push-to-mini-sidebar">
+          <button type="button" class="flex justify-center items-center gap-x-3 size-6 bg-white border border-gray-200 text-sm text-gray-600 hover:bg-gray-100 rounded-full disabled:opacity-50 disabled:pointer-events-none focus:outline-hidden focus:bg-gray-100 dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700 dark:hover:text-neutral-200 dark:focus:text-neutral-200" data-hs-overlay="#hs-sidebar-content-push-to-mini-sidebar">
             <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
             <span class="sr-only">Close</span>
           </button>
