--- a/src/app/sections/about-me/about-me.html
+++ b/src/app/sections/about-me/about-me.html
@@ -1,4 +1,4 @@
-<div class="space-y-8 flex flex-col">
+<div class="space-y-8 flex flex-col relative p-5 rounded-xl border border-[#ecf0f1] bg-white dark:bg-neutral-900 dark:border-neutral-700">
   <!-- Header -->
   <div class="flex flex-col md:flex-row items-start md:items-center gap-6">
     <!-- Avatar -->
