Se modifica rutas absolutas por rutas relativas

--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -21,7 +21,7 @@ fixed top-0 start-0 bottom-0 z-60 bg-white border-e border-gray-200 dark:bg-neut
       <!-- Header -->
       <header class="py-4 px-2 flex justify-between items-center gap-x-2">
 
-        <img class="hs-overlay-minified:hidden w-16 dark:invert" src="/logo.svg" alt="Logo" />
+        <img class="hs-overlay-minified:hidden w-16 dark:invert" src="logo.svg" alt="Logo" />
 
         <div class="lg:hidden">
           <!-- Close Button -->
