--- a/src/app/sections/about-me/about-me.html
+++ b/src/app/sections/about-me/about-me.html
@@ -4,7 +4,7 @@
     <!-- Avatar -->
     <img
       class="size-32 rounded-full border border-[#ecf0f1] dark:border-neutral-700"
-      src="/profile.jpg"
+      src="profile.jpg"
       alt="Avatar"
     />
 
