Se quita barra minimizada, para la correcta gestion de los eventos overlay

--- a/src/app/sections/projects/projects.html
+++ b/src/app/sections/projects/projects.html
@@ -1,11 +1,5 @@
 <div
-  class="
-    bg-white dark:bg-neutral-900
-    p-4 rounded-lg shadow-sm
-    flex flex-col gap-4
-    lg:grid lg:grid-cols-9 lg:gap-4
-  "
->
+  class=" bg-white dark:bg-neutral-900 p-4 rounded-lg shadow-sm flex flex-col gap-4 lg:grid lg:grid-cols-9 lg:gap-4">
   <div class="lg:col-span-2 sm:hidden md:hidden lg:block">
     <tabnav [items]="tabNames" />
   </div>
