--- a/src/app/components/container/container.html
+++ b/src/app/components/container/container.html
@@ -1,5 +1,5 @@
 <section [id]="id()"
-  class="mb-5 min-h-[50vh] p-4 rounded-lg transition-all duration-300 ml-0 lg:ml-16" [class.lg:ml-64]="isSidebarOpened()">
+  class="mb-5 min-h-[50vh] p-4 rounded-lg transition-all duration-300 ml-0 lg:ml-64">
     <span
       class="inline-flex items-center gap-x-1.5 py-1.5 px-3 mb-4 rounded-lg text-xs font-medium bg-white dark:bg-neutral-800 dark:text-white">
       {{ title() }}
