--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -1,15 +1,15 @@
 <div class="flex flex-col bg-[#ecf0f1] dark:bg-neutral-700">
     <sidebar />
-    <container title="Acerca de Mi" [isSidebarOpened]="isSidebarOpened()" id="aboutme">
+    <container title="Acerca de Mi" id="aboutme">
         <app-about-me />
     </container>
-    <container title="Experiencia Profesional" [isSidebarOpened]="isSidebarOpened()" id="experience">
+    <container title="Experiencia" id="experience">
         <app-experience />
     </container>
-    <container title="Proyectos Personales" [isSidebarOpened]="isSidebarOpened()" id="projects">
+    <container title="Proyectos" id="projects">
         <app-projects />
     </container>
-    <container title="Formación" [isSidebarOpened]="isSidebarOpened()" id="academicinformation">
+    <container title="Formación" id="academicinformation">
         <app-academic-information />
     </container>
 </div>
