Se soluciona bug en dispositivos moviles

--- a/src/app/sections/projects/projects.html
+++ b/src/app/sections/projects/projects.html
@@ -1,6 +1,6 @@
 <div
   class=" bg-white dark:bg-neutral-900 p-4 rounded-lg shadow-sm flex flex-col gap-4 lg:grid lg:grid-cols-9 lg:gap-4">
-  <div class="lg:col-span-2 sm:hidden md:hidden lg:block">
+  <div class="lg:block hidden lg:col-span-2 ">
     <tabnav [items]="tabNames" />
   </div>
 
